--- a/docs/translation/Descent_LocalizationDictionary.csv
+++ b/docs/translation/Descent_LocalizationDictionary.csv
@@ -1120,6 +1120,7 @@
 "Web","Netz",,,,,,,,,,
 "Whisper","Flüstern",,,,,,,,,,
 "Wither","Verwelken",,,,,,,,,,
-"portcullis","Fallgitter"
+"portcullis","Fallgitter",,,,,,,,,,
+
 
 
