--- a/docs/translation/Descent_LocalizationDictionary.csv
+++ b/docs/translation/Descent_LocalizationDictionary.csv
@@ -604,6 +604,7 @@
 "as indicated","wie abgebildet",,,,,,,,,,
 "as shown","wie abgebildet",,,,,,,,,,
 "ignoring group limits"," (Gruppengröße einhalten)",,,,,,,,,,
+", respecting group limits"," (Gruppengröße einhalten)",,,,,,,,,,
 "place 1 search token on","Platziert 1 Suchmarker auf",,,,,,,,,,
 "search token","Suchmarker",,,,,,,,,,
 "Confirm","Bestätigen",,,,,,,,,,
@@ -1121,6 +1122,7 @@
 "Whisper","Flüstern",,,,,,,,,,
 "Wither","Verwelken",,,,,,,,,,
 "portcullis","Fallgitter",,,,,,,,,,
+
 
 
 
