--- a/docs/translation/Descent_LocalizationDictionary.csv
+++ b/docs/translation/Descent_LocalizationDictionary.csv
@@ -1122,7 +1122,7 @@
 "Whisper","Flüstern",,,,,,,,,,
 "Wither","Verwelken",,,,,,,,,,
 "portcullis","Fallgitter",,,,,,,,,,
-
-
-
-
+Lieutenant,Hauptmann
+Lieutenants,Hauptmänner
+Lieutenant card,Hauptmannkarte
+Lieutenant cards,Hauptmannkarten
