Updated translation dictionary.

--- a/docs/translation/Descent_LocalizationDictionary.csv
+++ b/docs/translation/Descent_LocalizationDictionary.csv
@@ -662,6 +662,7 @@
 "with the least Health remaining","Mit den wenigsten verbleibenden Lebenspunkten",,,,,,,,,,
 "with the most Health remaining","Mit den meisten verbleibenden Lebenspunkten",,,,,,,,,,
 "Place","Platziert",,,,,,,,,,
+"To defeat","besiegen",,,,,,,,,,
 "Defeat","Niederlage",,,,,,,,,,
 "Victory","Sieg",,,,,,,,,,
 "Rewards","Belohnungen",,,,,,,,,,
