Updated translation dictionary.

--- a/docs/translation/Descent_LocalizationDictionary.csv
+++ b/docs/translation/Descent_LocalizationDictionary.csv
@@ -675,6 +675,8 @@
 "Line of sight","Sichtlinie",,,,,,,,,,
 "retreat","ziehe dich zurück",,,,,,,,,,
 "Then retreat","Dann ziehe dich zurück",,,,,,,,,,
+"Attribute","Attribut",,,,,,,,,,
+"Attributes","Attribute",,,,,,,,,,
 "attribute tests","Attributsproben",,,,,,,,,,
 "attribute test","Attributsprobe",,,,,,,,,,
 "Each attack gains +1 Range","Jeder Angriff erhält +1 Reichweite",,,,,,,,,,
@@ -1124,9 +1126,16 @@
 "Whisper","Flüstern",,,,,,,,,,
 "Wither","Verwelken",,,,,,,,,,
 "portcullis","Fallgitter",,,,,,,,,,
-Lieutenant,Hauptmann,,,,,,,,,,
-Lieutenants,Hauptmänner,,,,,,,,,,
-Lieutenant card,Hauptmannkarte,,,,,,,,,,
-Lieutenant cards,Hauptmannkarten,,,,,,,,,,
-Heroic feat,Heldentat,,,,,,,,,,
-Heroic feats,Heldentaten,,,,,,,,,,
+"Lieutenant","Hauptmann",,,,,,,,,,
+"Lieutenants","Hauptmänner",,,,,,,,,,
+"Lieutenant card","Hauptmannkarte",,,,,,,,,,
+"Lieutenant cards","Hauptmannkarten",,,,,,,,,,
+"Heroic feat","Heldentat",,,,,,,,,,
+"Heroic feats","Heldentaten",,,,,,,,,,
+"Archtypes","Archetypen",,,,,,,,,,
+"Archtype","Archetyp",,,,,,,,,,
+"Warrior","Krieger",,,,,,,,,,
+"Healer","Heiler",,,,,,,,,,
+"Mage","Magier",,,,,,,,,,
+"Scout","Kundschafter",,,,,,,,,,
+"Target marker","Anvisiert-Marker",,,,,,,,,,
