Updated translation dictionary.

--- a/docs/translation/Descent_LocalizationDictionary.csv
+++ b/docs/translation/Descent_LocalizationDictionary.csv
@@ -1139,3 +1139,7 @@
 "Mage","Magier",,,,,,,,,,
 "Scout","Kundschafter",,,,,,,,,,
 "Target marker","Anvisiert-Marker",,,,,,,,,,
+"Peril","Gefahreneffekt",,,,,,,,,,
+"Minor peril","Geringer Gefahreneffekt",,,,,,,,,,
+"Major peril","Größerer Gefahreneffekt",,,,,,,,,,
+"Greatest peril","Größter Gefahreneffekt",,,,,,,,,,
