--- a/docs/translation/Descent_LocalizationDictionary.csv
+++ b/docs/translation/Descent_LocalizationDictionary.csv
@@ -1143,3 +1143,4 @@
 "Minor peril","Geringer Gefahreneffekt",,,,,,,,,,
 "Major peril","Größerer Gefahreneffekt",,,,,,,,,,
 "Greatest peril","Größter Gefahreneffekt",,,,,,,,,,
+"Knocked out","Niedergestreckt",,,,,,,,,,
